<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/history"
            android:text="@string/title_history"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/history_market"/>

        <TextView
            android:id="@+id/textView2"
            style="@style/history_info"
            android:text="@string/hisory_of_rybnik"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/history_castle"/>

        <TextView
            style="@style/history_info"
            android:text="@string/rybnik_info"/>
    </LinearLayout>
</ScrollView>